--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -10,20 +10,23 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11", "3.12"]
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Python
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
-        python-version: '3.10'
+        python-version: ${{ matrix.python-version }}
 
     - name: Install apt dependencies
       run: |
-        sudo add-apt-repository ppa:savoury1/ffmpeg4
         sudo apt-get update
-        sudo apt-get -y install ffmpeg libportaudio2=19.6.0-1.1
+        sudo apt-get -y install ffmpeg libportaudio2
 
     - name: Install pip dependencies
       run: |
